--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
 	"main": "server.js",
 	"author": "Rohit ambre, FCC",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"test": "jest"
 	},
 	"dependencies": {
+		"cors": "^2.8.1",
 		"express": "^5.0.0-alpha.2",
-		"cors": "^2.8.1"
+		"jest": "^24.8.0",
+		"supertest": "^4.0.2"
 	},
 	"engines": {
 		"node": "4.4.5"
@@ -24,5 +28,8 @@
 		"express",
 		"freecodecamp"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^1.19.1"
+	}
 }
